[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildflow"
version = "0.1.2"
authors = [
    { name = "Caleb Van Dyke", email = "caleb@launchflow.com" },
    { name = "Josh Tanke", email = "josh@launchflow.com" },
]
description = "buildflow is a unified **batch** and **streaming** framework that turns any python function into a scalable data pipeline that can read from our supported IO resources."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    # TODO: split up AWS and GCP dependencies.
    "boto3",
    "dacite",
    "duckdb==0.6.0",
    "google-auth",
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
    "google-cloud-monitoring",
    "google-cloud-pubsub",
    "google-cloud-storage",
    # TODO: https://github.com/grpc/grpc/issues/31885
    "grpcio<1.51.1",
    "fastparquet",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-jaeger",
    "pandas",
    "pulumi==3.35.3",
    "pulumi_gcp",
    "pyarrow",
    "pyyaml",
    "ray[default] > 2.0.0",
    "typer",
    "redis",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
dev = [
    "moto",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
    "black",
    "pre-commit",
    "setuptools",
    "wheel"
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
buildflow = "buildflow.cli.main:main"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
# Files to ignore
omit = [
    # Exclude samples
    "buildflow/samples/*",
    "buildflow/cli/*",
    # Exclude skipped / prototype code
    "buildflow/runtime/ray_io/duckdb_io*"
]
